testfx/errors/error_tests/err_06_arr_missing_bracket.fx
// 测试6: 数组错误 - 缺少闭合方括号
arr := [1, 2, 3
